tests/errors/raise-uncaught.au
func hello() {
    raise "Hello World\n";
}

hello();